resolved: Move cards inside two cards group with one gesture. #20, resolved: MS Pointer Events to properly drag cards on IE touch devices #27

--- a/apps/web/priv/static/app/css/main.css
+++ b/apps/web/priv/static/app/css/main.css
@@ -4,3 +4,9 @@ html, body { -webkit-user-select: none; user-select: none; }
 html, body { margin: 0; padding:0; overflow: hidden; width: 100%; height: 100%; font-family: "Exo 2"; }
 text { cursor: default; }
 .card text { cursor: inherit; }
+.card {
+	-ms-touch-action :    none;
+    touch-action :        none;
+    -ms-scroll-chaining:  none;
+    -ms-scroll-limit:     0 0 0 0;
+}
